--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,15 @@
 		font-weight: bold;
 	}
 }
+th, td {
+	border: 1px solid black;
+}
+
+
+.Male {
+	background: blue;
+}
+
+.Female {
+	background: pink;
+}
