--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,15 @@ th, td {
 	border: 1px solid black;
 }
 
+.tableStyle  {
+	padding: '15px';
+	position: 'absolute';
+	border: '2px solid black';
+	left: '50%';
+	top: '150px';
+	border-Collapse: 'collapse';
+	text-align: center;
+}
 
 .Male {
 	background: blue;
